  `__', as generated by g77 on several architectures.


Data exploration
----------------

- Several improvements in data recognition.  DDD recognizes many more
  data formats and no more shows differences between creating and
  updating data displays.

- `Set ()' now allows to set structs as a whole.

- Anonymous unions are no longer prefixed by `='.


Miscellaneous
-------------

- Signal settings are saved with the current session.

- Improved redirection handling.  You can now redirect stderr away
  from the execution window, using `run 2> FILE'.  `run 2> /dev/tty'
  will redirect stderr to the debugger console.

- Minor performance improvements.



DDD 3.0
=======

DDD 3.0 brings a new, `clean' look, Java support, and JDB support.


User Interface
--------------

- New, `clean' look.  One single tool bar at the top provides all actions.

- Low screen space requirements.  In the default configuration, DDD
  requires less than 600x600 pixels.

- Configurable fonts.  You can easily customize DDD font settings via
  `Edit->Preferences->Fonts'.

- Tear-off menus are supported (and enabled by default).

- New key bindings.
  * All key bindings are conformant with the KDE style guide:
    Ctrl+O opens a file, Ctrl+S saves the session, etc.
  * ESC is the canonical `Interrupt' key.  Ctrl+C still
    interrupts, too, but can be assigned to Copy for full KDE
    style compliance.

- Edit->Cut/Copy/Paste/... now apply to the current destination
  text field (i.e. the one that has the selection, or the least
  recently used).  This way, you can cut/copy/paste across all
  text fields.

- History mania.  Several text fields, including the `()' argument
  field, now have drop down history selections.


Debuggers and Languages
-----------------------

- JDB support.  DDD now also supports JDB as inferior debugger.  All
  important JDB features are available via the GUI.

- Java support.  Requires GDB 4.17 or later (or JDB, of course).  All